# NeuroMind

./: .gitignore  README.md  pyproject.toml  test_db.py  test_gemini.py
alembic/: env.py
alembic/versions/: bcaa85cc541e_create_roadmap_tables.py
app/: main.py
app/ai/: client.py
app/ai/prompts/: chat_prompt.py  project_prompt.py  roadmap_prompt.py
app/api/: router.py
app/api/routes/: chat.py  health.py  project.py  roadmap.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  roadmap.py  roadmap_subtask.py  roadmap_task.py
app/rag/: __init__.py  document_builder.py  embedding_service.py  indexer.py  retriever.py  vector_store.py
app/repositories/: __init__.py  roadmap_repository.py
app/schemas/: chat.py  project.py  roadmap.py
app/services/: __init__.py  chat_service.py  project_service.py  roadmap_service.py
frontend/: app.py
