[project]
name = "neuromind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=4.1.0",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.1",
    "uvicorn[standard]>=0.50.2",
]
